[package]
name = "kbinxml"
version = "1.2.1"
authors = ["Matt Bilker <me@mbilker.us>"]
description = "An encoder/decoder for Konami's binary XML format used in many of their games."
edition = "2018"

[dependencies]
byteorder = "1.3.2"
bytes = "0.4.10"
encoding_rs = "0.8.6"
indexmap = "1.0.1"
lazy_static = "1.0.0"
log = "0.4.6"
quick-xml = "0.17.0"
rustc-hex = "2.0.1"
snafu = "0.6.0"

clap = { version = "2.32.0", optional = true }
pretty_env_logger = { version = "0.3.0", optional = true }

[features]
build_binary = ["clap", "pretty_env_logger"]

[profile.release]
lto = true

[[bin]]
name = "kbinxml"
required-features = ["build_binary"]
