[package]
name = "kbinxml"
version = "3.0.0"
authors = ["Matt Bilker <me@mbilker.us>"]
description = "An encoder/decoder for Konami's binary XML format used in many of their games."
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.3.2"
bytes = "1.0.1"
encoding_rs = "0.8.6"
indexmap = "1.0.1"
lazy_static = "1.0.0"
log = "0.4.6"
quick-xml = "0.22.0"
rustc-hex = "2.0.1"
snafu = "0.7.0"
