[package]
name = "kbinxml_cli"
version = "2.0.0"
authors = ["Matt Bilker <me@mbilker.us>"]
description = "An encoder/decoder for Konami's binary XML format used in many of their games."
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0.19"
byteorder = "1.3.2"
clap = "2.32.0"
encoding_rs = "0.8.6"
kbinxml = { path = "../kbinxml" }
pretty_env_logger = "0.3.0"

[[bin]]
name = "kbinxml"
path = "src/main.rs"
